# Cryptography

./: CMakeLists.txt  Experiment.cpp  KHAZAD.hpp  README.md  TTables.hpp  auxiliary.hpp  difference.hpp  main.cpp  randomizer.cpp
lib/include/: Experiment.hpp  KHAZAD.hpp  TTables.hpp  randomizer.hpp  sbox.hpp
lib/src/: Experiment.cpp  randomizer.cpp
src/: CMakeLists.txt  main.cpp
